Fix: Wrapping of language buttons
Had each card as its own flexbox instead of a parent flexbox, and then rendering children buttons.

--- a/src/app/languages-card/languages-card.component.css
+++ b/src/app/languages-card/languages-card.component.css
@@ -1,12 +1,18 @@
-.language-card {
+.language-container {
   display: flex;
   flex-wrap: wrap;
+  gap: 20px;
   justify-content: center;
 }
 
-.language-card button {
+.language-card {
   border: 1px solid #444;
   border-radius: 15px;
-  padding: 5px;
+}
+
+.language-card button {
+  padding: 10px;
   width: 100px;
+  border: 1px solid #444;
+  border-radius: 15px;
 }
